--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,9 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: study-blue-clone_development
+  database: study_two_development
   pool: 5
-  username: study-blue-clone
+  username: webdevelopment
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -46,15 +46,15 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: study-blue-clone_test
+  database: study_two_test
   pool: 5
-  username: study-blue-clone
+  username: webdevelopment
   password:
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: study-blue-clone_production
+  database: study_two_production
   pool: 5
-  username: study-blue-clone
+  username: webdevelopment
   password:
